# Trend-Mirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  batch_main.py  docker-compose.yml  main.py  pyproject.toml  query_db_script.py  restart.sh  simple_debug.py  start.sh  start_docker.sh  stop.sh  stop_docker.sh
.github/workflows/: deploy.yml
app/: deps.py  main.py
app/agents/: state.py  tools.py  utils.py  workflow.py
app/agents/subgraphs/: insight_extract.py  keyword_extract.py  naver_blog_process.py  strategy_build.py  strategy_gen.py  visualization_gen.py  youtube_collect.py  youtube_process.py
app/api/routes/: chat.py
app/core/: db.py  llm.py  logger.py
app/models/schemas/: chat.py
app/repository/client/: base.py  llm_client.py  naver_blog_client.py  search_client.py  youtube_client.py
app/repository/client/data/: naver_blog_food_candidates_7d.csv  naver_blog_keyword_stats_7d.csv  naver_blog_posts_7d_labeled.csv  youtube_trend_candidates.csv  youtube_trend_keywords_simple.csv
app/repository/vector/: vector_repo.py
app/service/: agent_service.py  embedding_service.py  naver_validate_service.py  sync_service.py  trend_data_organizer.py  vector_service.py
infra/: ui.py
infra/frontend/: ui.py
infra/k8s/application/: 01-namespace.yml  02-configmap.yaml  03-chromadb.yaml  04-backend.yaml  05-frontend.yaml  06-ingress.yaml  07-pvc.yaml
scripts/: clear_db_script.py  food_youtube_20260112.csv  food_youtube_20260113.csv  inspect_trend_db.py  readme.txt  sync_trend_db.py  trend_data_organizer.py  youtube_data_to_keywords.ipynb
